--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -164,31 +164,9 @@
     }
   }
 </style>
-
-<main class="main">
-  <div class="content">
-    <div class="left-side">
-      <h1>{{title}}</h1>
-    </div>
-    <div class="divider" role="separator" aria-label="Divider"></div>
-    <div class="right-side">
-      <div class="pill-group">
-        @if (loading) {
-          <p>Loading...</p>
-        }
-        @for (project of projects; track project) {
-          <span class="pill">{{project.name}}</span>
-          <ul class="user-list">
-            @for (user of project.users; track user) {
-              <li>{{user.name}} - {{user.position}}</li>
-            }
-          </ul>
-        }
-      </div>
-    </div>
-  </div>
-</main>
-<router-outlet></router-outlet>
+<div class="content" role="main">
+  <router-outlet></router-outlet>
+</div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
