--- a/app/src/app/project-edit/project-edit.component.html
+++ b/app/src/app/project-edit/project-edit.component.html
@@ -1,1 +1,63 @@
-<p>project-edit works!</p>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+    <li class="breadcrumb-item"><a routerLink="/projects">Projects</a></li>
+    <li class="breadcrumb-item active">Edit Project</li>
+  </ol>
+</nav>
+
+<h2>Project Information</h2>
+@if (feedback.message) {
+  <div class="alert alert-{{feedback.type}}">{{ feedback.message }}</div>
+}
+@if (project) {
+  <form #editForm="ngForm" (ngSubmit)="save()">
+    @if (project.id) {
+      <mat-form-field class="full-width">
+        <mat-label>ID</mat-label>
+        <input matInput [(ngModel)]="project.id" id="id" name="id" placeholder="ID" readonly
+               matTooltip="ID cannot be edited" matTooltipPosition="above">
+      </mat-form-field>
+    }
+    <mat-form-field class="full-width">
+      <mat-label>Name</mat-label>
+      <input matInput [(ngModel)]="project.name" id="name" name="name" placeholder="Name" required>
+    </mat-form-field>
+
+    <mat-form-field class="full-width">
+      <mat-label>Description</mat-label>
+      <input matInput [(ngModel)]="project.description" id="description" name="description" placeholder="Description" required>
+    </mat-form-field>
+
+    @if (project.users.length) {
+      <h3>Users</h3>
+    }
+    @for (user of project.users; track user; let i = $index) {
+      <div class="full-width">
+        <mat-form-field style="width: 35%">
+          <mat-label>Consultant Name</mat-label>
+          <input matInput [(ngModel)]="project.users[i].name" name="project.users[{{i}}].name" placeholder="name">
+        </mat-form-field>
+        <mat-form-field style="width: 65%">
+          <mat-label>Position</mat-label>
+          <input matInput [(ngModel)]="project.users[i].position" name="group.events[{{i}}].position" placeholder="position">
+        </mat-form-field>
+        <button mat-icon-button (click)="removeUser(i)" aria-label="Remove User"
+                style="float: right; margin: -70px -5px 0 0">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
+    }
+    <div class="button-row" role="group">
+      @if (project.id) {
+        <button type="button" mat-mini-fab color="accent" (click)="addUser()"
+                aria-label="Add Event" matTooltip="Add Event"
+                style="float: right; margin-top: -4px">
+          <mat-icon>add</mat-icon>
+        </button>
+      }
+      <button type="submit" mat-raised-button color="primary" [disabled]="!editForm.form.valid" id="save">Save</button>
+      <button type="button" mat-button color="accent" (click)="cancel()" id="cancel">Cancel</button>
+    </div>
+  </form>
+}
