--- a/app/src/app/project-list/project-list.component.html
+++ b/app/src/app/project-list/project-list.component.html
@@ -5,7 +5,7 @@
   </ol>
 </nav>
 
-<a [routerLink]="['/project/new']" mat-raised-button color="primary" style="float: right" id="add">Add Project</a>
+<a [routerLink]="['/projects/new']" mat-raised-button color="primary" style="float: right" id="add">Add Project</a>
 
 <h2>{{title}}</h2>
 @if (loading) {
