--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -165,7 +165,7 @@
   }
 </style>
 <mat-toolbar role="banner" color="primary">
-  <svg id="angular-logo" height="35" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 960 960" fill="#fff">
+  <svg id="angular-logo" height="35" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 960 960" fill="#fff" class="icon-space">
     <g>
       <polygon points="562.6,109.8 804.1,629.5 829.2,233.1"/>
       <polygon points="624.9,655.9 334.3,655.9 297.2,745.8 479.6,849.8 662,745.8"/>
@@ -173,36 +173,23 @@
       <polygon points="396.6,109.8 130,233.1 155.1,629.5"/>
     </g>
   </svg>
-  <span>{{ title }}</span>
+  <a routerLink="/" class="icon-space">
+    <span>{{ title }}</span>
+  </a>
   <div class="spacer"></div>
-  <a aria-label="OktaDev on Twitter" target="_blank" rel="noopener" href="https://twitter.com/oktadev" title="Twitter">
-    <svg id="twitter-logo" height="35" data-name="Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
-      <rect width="400" height="400" fill="none"/>
-      <path
-        d="M153.62,301.59c94.34,0,145.94-78.16,145.94-145.94,0-2.22,0-4.43-.15-6.63A104.36,104.36,0,0,0,325,122.47a102.38,102.38,0,0,1-29.46,8.07,51.47,51.47,0,0,0,22.55-28.37,102.79,102.79,0,0,1-32.57,12.45,51.34,51.34,0,0,0-87.41,46.78A145.62,145.62,0,0,1,92.4,107.81a51.33,51.33,0,0,0,15.88,68.47A50.91,50.91,0,0,1,85,169.86c0,.21,0,.43,0,.65a51.31,51.31,0,0,0,41.15,50.28,51.21,51.21,0,0,1-23.16.88,51.35,51.35,0,0,0,47.92,35.62,102.92,102.92,0,0,1-63.7,22A104.41,104.41,0,0,1,75,278.55a145.21,145.21,0,0,0,78.62,23"
-        fill="#fff"/>
+  <a aria-label="GitHub Profile" target="_blank" rel="noopener" href="https://github.com/eXiled4" title="GitHub" class="icon-space">
+    <svg height="35" viewBox="0 0 16 16" version="1.1" width="35" aria-hidden="true">
+      <path fill="#ffffff" fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>
     </svg>
   </a>
-  <a aria-label="OktaDev on YouTube" target="_blank" rel="noopener" href="https://youtube.com/oktadev" title="YouTube">
-    <svg id="youtube-logo" height="35" data-name="Logo" xmlns="http://www.w3.org/2000/svg"
-         viewBox="0 0 24 24" fill="#fff">
-      <path d="M0 0h24v24H0V0z" fill="none"/>
-      <path
-        d="M21.58 7.19c-.23-.86-.91-1.54-1.77-1.77C18.25 5 12 5 12 5s-6.25 0-7.81.42c-.86.23-1.54.91-1.77 1.77C2 8.75 2 12 2 12s0 3.25.42 4.81c.23.86.91 1.54 1.77 1.77C5.75 19 12 19 12 19s6.25 0 7.81-.42c.86-.23 1.54-.91 1.77-1.77C22 15.25 22 12 22 12s0-3.25-.42-4.81zM10 15V9l5.2 3-5.2 3z"/>
+  <a aria-label="LinkedIn Profile" target="_blank" rel="noopener" href="https://www.linkedin.com/in/julian-teo-a11699238" title="LinkedIn" class="icon-space">
+    <svg id="linkedin-logo" height="35" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="#fff">
+      <path d="M426.1 13H85.9C66.5 13 51 28.5 51 47.9v416.3c0 19.3 15.5 34.8 34.9 34.8h340.1c19.4 0 34.9-15.6 34.9-34.9V47.9c.1-19.4-15.4-34.9-34.8-34.9zM167 407h-57V202h57v205zm-29.2-234c-18.1 0-32.7-14.6-32.7-32.6s14.7-32.7 32.7-32.7 32.7 14.6 32.7 32.6c0 18.1-14.6 32.7-32.7 32.7zM395 407h-57V303c0-26-10-43.6-34.5-43.6-18.8 0-30 12.7-35 24.9-1.8 4.3-2.3 10.2-2.3 16.2v105.5h-57s.8-171 0-189h57v26.8c7.5-11.6 21-28.2 51.1-28.2 37.3 0 65.2 24.5 65.2 77.1v113.3z"/>
     </svg>
   </a>
+
 </mat-toolbar>
 <div class="content" role="main">
   <router-outlet></router-outlet>
 </div>
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
 <router-outlet />
