Done for now, to demo and do last minute checks tomorrow

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -112,8 +112,7 @@
     </svg>
   </a>
 
-</mat-toolbar>
-<div class="content" role="main">
+</mat-toolbar><div class="content" role="main">
   <router-outlet></router-outlet>
 </div>
 <router-outlet />
