--- a/app/src/app/home/home.component.html
+++ b/app/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<a mat-button color="primary" href="/projects">Manage Projects and Users here at TimeTrackr</a>
+<a mat-button color="primary" href="/projects" class="admin-content">
+  <strong>
+    Continue here to manage Projects and Users here at TimeTrackr
+  </strong>
+</a>
