--- a/app/src/app/project-new/project-new.component.html
+++ b/app/src/app/project-new/project-new.component.html
@@ -19,7 +19,13 @@
 
   <mat-form-field appearance="fill" class="full-width">
     <mat-label>Status</mat-label>
-    <input matInput [(ngModel)]="project.status" name="status" placeholder="Enter project status" required>
+    <mat-select [(ngModel)]="project.status" name="status" required>
+      <mat-option value="Proposal">Proposal</mat-option>
+      <mat-option value="Planned">Planning</mat-option>
+      <mat-option value="Active">Active</mat-option>
+      <mat-option value="On Hold">On Hold</mat-option>
+      <mat-option value="Completed">Completed</mat-option>
+    </mat-select>
   </mat-form-field>
 
   <mat-form-field appearance="fill" class="full-width">
