--- a/app/src/app/project-edit/project-edit.component.html
+++ b/app/src/app/project-edit/project-edit.component.html
@@ -32,7 +32,7 @@
     <mat-label>Status</mat-label>
     <mat-select [(ngModel)]="project.status" id="status" name="status" required>
       <mat-option value="Proposal">Proposal</mat-option>
-      <mat-option value="Planned">Planned</mat-option>
+      <mat-option value="Planning">Planning</mat-option>
       <mat-option value="Active">Active</mat-option>
       <mat-option value="On Hold">On Hold</mat-option>
       <mat-option value="Completed">Completed</mat-option>
