--- a/app/src/app/home/home.component.html
+++ b/app/src/app/home/home.component.html
@@ -1,3 +1,5 @@
+
+<div class="parent-home"></div>
 <a mat-button color="primary" href="/projects" class="admin-content">
   <strong>
     Continue here to manage Projects and Users here at TimeTrackr
