--- a/app/src/app/home/home.component.css
+++ b/app/src/app/home/home.component.css
@@ -1,10 +1,13 @@
 .admin-content{
   padding: 1cm;
   font-size: 1.5rem;
-  border-radius: 98%;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center; /* Center the text inside the link */
   margin: 0 auto; /* Center horizontally */
+}
+
+.parent-home {
+  min-height: 8cm;
 }
